...
            ) {
                Text(
                    text = "List of Shows",
                    style = TextStyle(color = Color.White, fontSize = 16.sp)
                )
                Spacer(Modifier.weight(1f))
                Text(text = "More", style = TextStyle(color = Color.Red, fontSize = 16.sp),
                    modifier = Modifier.clickable {
                        navController.navigate(route = SHOWLIST_SCREEN)
                    }
                )
            }

...
            Row(
                modifier = Modifier
                    .padding(12.dp),
                horizontalArrangement = Arrangement.End
            ) {
                Text(
                    text = "Top Rated Shows",
                    style = TextStyle(color = Color.White, fontSize = 16.sp)
                )
                Spacer(Modifier.weight(1f))
                Text(text = "More", style = TextStyle(color = Color.Red, fontSize = 16.sp),
                    modifier = Modifier.clickable {
                        navController.navigate(route = SHOWLIST_SCREEN)
...
