...
                    )
                },
                modifier = Modifier
                    .padding(10.dp)
                    .fillMaxWidth(),
                placeholder = {
                    Text(text = "Search...")
                },
                maxLines = 1,
                singleLine = true,
                label = { Text("Search") }
            )
            SwipeRefresh(
...
